# quadrantic

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
examples/: __init__.py  visualize_angle.py  wetterdienst_station_distribution.py
quadrantic/: __init__.py
tests/: test_quadrantic.py
