[tool.poetry]
name = "quadrantic"
version = "0.1.0"
description = "Determination of quadrants based on angle, coordinates and others"
authors = ["Benjamin Gutzmann <gutzemann@gmail.com>"]
license = "MIT"
readme = "README.rst"

include = [
    "LICENSE",
]
homepage = "https://github.com/earthobservations/quadrantic"
repository = "https://github.com/earthobservations/quadrantic"

keywords = [
    "open-source",
    "quadrant",
    "geometry",
    "plane-geometry",
    "point",
    "coordinates"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.poetry.urls]
"Issues" = "https://github.com/earthobservations/quadrantic/issues"
"Releases" = "https://github.com/earthobservations/quadrantic/releases"

[tool.poetry.dependencies]
python = "^3.8"
Shapely = "^1.8.4"
matplotlib = {version = "^3.6.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0"
black = "^22.8.0"
poethepoet = "^0.16.2"
flakeheaven = "^3.0.0"
isort = "^5.10.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-copyright = "^0.2.3"
flake8-eradicate = "^1.4.0"
flake8-isort = "^4.2.0"
flake8-print = "^5.0.0"
flake8-return = "^1.1.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flakeheaven]
exclude = [
    "example/climate_observations.ipynb"
]
format = "grouped"
max-line-length = 120
extended_default_ignore = []

[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E203", "-W503", "-E501", "-E231"]
pyflakes = ["+*"]
flake8-bandit = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*", "-A003"]
flake8-comprehensions = ["+*"]
flake8-copyright = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-print = ["+*"]
flake8-return = ["+*"]
flake8-2020 = ["+*"]

[tool.poe.tasks]
black = "black quadrantic tests"
isort = "isort quadrantic tests"
format = ["black", "isort"]
lint = "flakeheaven lint quadrantic tests"
test = "pytest -vvv tests"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
